--- a/プロジェクト/3D_Temp/3D_Temp.vcxproj
+++ b/プロジェクト/3D_Temp/3D_Temp.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{a5467687-8233-4e59-9fac-b0e7fbec63d6}</ProjectGuid>
+    <ProjectGuid>{dab38923-90e0-40f3-a6ba-67f527b9623f}</ProjectGuid>
     <RootNamespace>My3DTemp</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -165,6 +165,7 @@
     <ClCompile Include="move_texture.cpp" />
     <ClCompile Include="object.cpp" />
     <ClCompile Include="object2D.cpp" />
+    <ClCompile Include="object3D.cpp" />
     <ClCompile Include="player.cpp" />
     <ClCompile Include="precompile.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
